syntax = "proto3";
package org.zero.aienglish.lib;
option java_package = "org.zero.aienglish.lib.grpc";

message CreateUserRequest {
  string username = 1;
}

message UpdateUserRequest {
  int32 user_id = 1;
  string username = 2;
}

message UserResponse {
  int32 user_id = 1;
}

service UserService {
  rpc createUser(CreateUserRequest) returns (UserResponse) {};
  rpc updateUser(UpdateUserRequest) returns (UserResponse) {};
}